# SNEMO_gain_follow

./: CMakeLists.txt  Li_system.cxx  README.md  charge_amplitude_energie.cxx  setup.sh
Bi/: OM_positions.csv  UDD_to_PTD.conf  first_step_bi.sh  second_step_bi.sh  source_position.txt
Li/: CMakeLists.txt  Li.sh
Li/src/: Li_system.cxx  new_histo_Li.cc  new_histo_Li.cc~
comparison_Bi_Li/: Bi.sh  CMakeLists.txt
comparison_Bi_Li/src/: Bi.cxx
corr_om_ref/: CMakeLists.txt  README.txt  README.txt~  ref_om_correction.sh
corr_om_ref/src/: Modele_OM.cc  Modele_OM.cc~  charge_amplitude_energie.cxx~  charge_amplitude_energie_RHD.cxx  new_Loop_fit_remake.cc  new_Loop_fit_remake.cc~
